使いやすさのため、細かい修正をした
