# backend/docs/swagger.json
@@ -18,6 +18,20 @@
                 ],
                 "summary": "get post list",
                 "operationId": "get-post-list",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "件数 未実装です。",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "開始位置 未実装です。",
+                        "name": "offset",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -26,6 +40,12 @@
                             "items": {
                                 "$ref": "#/definitions/controllers.Post"
                             }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.ErrorResponse"
                         }
                     }
                 }
@@ -48,7 +68,7 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Post ID",
+                        "description": "Post ID デフォルトで1から2までしかデータがありません。",
                         "name": "postId",
                         "in": "path",
                         "required": true
@@ -60,12 +80,41 @@
                         "schema": {
                             "$ref": "#/definitions/controllers.Post"
                         }
+                    },
+                    "400": {
+                        "description": "不正なpostID",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "ポストが見つからない",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.ErrorResponse"
+                        }
                     }
                 }
             }
         }
     },
     "definitions": {
+        "controllers.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
         "controllers.Post": {
             "type": "object",
             "properties": {
