# backend/internal/controllers/error_response.go
@@ -1,0 +1,7 @@
+package controllers
+
+// ErrorResponse represents an error response
+type ErrorResponse struct {
+    Code    int    `json:"code"`
+    Message string `json:"message"`
+}
